--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -6,23 +6,27 @@
 
 html {
     box-sizing: border-box;
-
-    /* font-size: 0; */
     color: #626262;
     font-family: 'Playfair Display', serif;
 }
+body{
+    margin: 0;
+}
 
 .container {
-    width: 1200px;
+    width: 900px;
     margin: 0 auto;
+    font-size: 0;
+    padding: 0;
 }
 
 .menu {
     margin: 0;
     padding: 0;
-    height: 192px;
-    text-align: center;
     padding-top: 77px;
+    padding-bottom: 104px;
+    text-align: center;
+    font-size: 0;
 }
 
 .menu li {
@@ -49,10 +53,9 @@ html {
     color: #03a9f4;
 }
 
-.row {
-    padding-left: 150px;
-    font-size: 0;
-    margin: 0;
+.row {    
+margin: 0 auto;
+padding: 0;
 }
 
 
@@ -88,12 +91,9 @@ html {
     text-transform: uppercase;
 }
 
-
-.dws {
-    text-align: center;
-}
-
 .button {
+    display: block;
+    margin: 0 auto;
     border: 1px solid #626262;
     background: none;
     padding: 21px 34px;
@@ -101,8 +101,9 @@ html {
     font-weight: 400;
     line-height: 24px;
     margin-bottom: 21px;
+
 }
 .row-content:last-child,
-.row-content:nth-last-child(-n+2){
-    margin-bottom: 30px;
+.row-content:nth-last-child(-n+3){
+    margin-bottom: 54px;
 }
