--- a/module-03/css/styles.css
+++ b/module-03/css/styles.css
@@ -57,12 +57,15 @@ body{
 margin: 0 auto;
 padding: 0;
 }
-
+.heading{
+    margin: 0;
+}
 
 .row-content h2 {
     font-size: 30px;
     font-weight: 400;
     margin-bottom: 34px;
+   
 }
 
 .row-content p {
@@ -106,4 +109,7 @@ padding: 0;
 .row-content:last-child,
 .row-content:nth-last-child(-n+3){
     margin-bottom: 54px;
+}
+.text{
+    margin: 0;
 }
