--- a/module-04/css/styles.css
+++ b/module-04/css/styles.css
@@ -12,17 +12,15 @@
     clear: both;
 }
 
-body {}
-
-.conttener {
+.container {
     width: 1110px;
     margin: 0 auto;
 }
 
 header {
-    float: left;
+    
     padding-top: 38px;
-    margin-bottom: 111px;
+    padding-bottom: 111px;
     width: 100%;
 
 }
@@ -62,10 +60,11 @@ header {
 }
 
 .menu-list-item a {
+    display: block;
     text-transform: uppercase;
     text-decoration: none;
     color: #0f0101;
-    font-family: "Open Sans";
+    font-family: "Open Sans", sans-serif;
     font-size: 14px;
     font-weight: 700;
     line-height: 11px;
@@ -80,46 +79,51 @@ h2 {
     color: #515151;
     font-family: 'Roboto', sans-serif;
     font-size: 48px;
-    font-weight: 400;
+    font-weight: 700;
     text-transform: uppercase;
-    margin-bottom: 32px;
-    
+    padding-bottom: 92px;
+
 }
-h2::after{
+
+h2::after {
     display: block;
+    content: '';
+    margin: 0 auto;    
     width: 164px;
     height: 7px;
-    content: '';
     background-color: #1abc9c;
-    margin: 0 auto;
-    margin-bottom: 92px;
+    margin-top: 32px;
 }
 
 
 .featured-products-list {
     margin: 0 auto;
-   font-size: 0;
-    
-    
+    font-size: 0;
+height: 674px;
+
 
 }
-.featured-products-list li{
+
+.featured-products-list li {
     float: left;
     margin-right: 30px;
     margin-bottom: 30px;
     list-style: none;
 }
+
 .featured-products-list-item {
     width: 255px;
     height: 322px;
-    list-style: none;      
+    list-style: none;
     float: left;
 }
 
 .featured-products-list li:nth-child(4n) {
     margin-right: 0px;
 }
-
+.featured-products-list li:nth-last-child(-n+4){
+    margin-bottom: 0px;
+}
 
 .production-text {
     padding-left: 13px;
@@ -127,12 +131,12 @@ h2::after{
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 900;
     line-height: 32px;
     text-transform: uppercase;
-    width: 189px;;  
+    width: 189px;    
     float: left;
-    
+
 }
 
 
@@ -140,21 +144,26 @@ h2::after{
     text-align: center;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
-font-size: 18px;
-font-weight: 400;
-line-height: 32px;
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 32px;
     background-color: #323232;
     opacity: 0.44;
     width: 53px;
     float: left;
 }
-.price:hover, .production-text:hover {
+
+.featured-products-list a:hover .production-text {
     background: #1abc9c;
 }
 
+.featured-products-list a:hover .price {
+    background: #1abc9c;
+    
+}
 
 .featured-products-list {
-    margin-bottom: 105px;
+    padding-bottom: 105px;
 }
 
 .latest-new-list {
@@ -177,43 +186,50 @@ line-height: 32px;
     margin: 0 auto;
 }
 
-.latest-new-list-item img{
-margin-bottom: 14px;
+.latest-new-list-item img {
+    margin-bottom: 14px;
 }
-.text-h{
-    margin-bottom: 11px;
+
+.text-h {
+   
     font-family: 'Open Sans', Arial, sans-serif;
     color: #555252;
-font-size: 18px;
-font-weight: 600;
-line-height: 26px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 26px;
 }
+
 .text-h::after {
+    margin-top: 11px;
     display: block;
     content: '';
     width: 136px;
     height: 3px;
     background-color: #4ec6ab;
-    margin-bottom: 29px;
+    
 }
 
+.text {
+padding-top: 29px;
+    color: #555252;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
 .button {
+    display: block;
     width: 160px;
     height: 51px;
     background-color: #4ec6ab;
     color: #ffffff;
-    font-family: "Open Sans";
+    font-family: "Open Sans", sans-serif ;
     font-size: 16px;
     font-weight: 300;
-    border: none;
+    border: 1px solid #4ec6ab;
     border-radius: 3px;
-    margin-bottom: 10px;
-}
-.text{
-    color: #555252;
-font-family: "Open Sans";
-font-size: 14px;
-font-weight: 400;
-line-height: 26px;
-margin-bottom: 16px;
+    text-decoration: none;
+     text-align: center;
+     line-height: 51px;
 }
