--- a/module-05/css/style.css
+++ b/module-05/css/style.css
@@ -17,16 +17,15 @@
 }
 
 .container {
-    width: 1600px;
+    width: 1110px;
     margin: 0 auto;
 }
 
 header {
-
     padding-top: 38px;
     padding-bottom: 32px;
-    width: 100%;
-
+    width: 1110px;
+    margin: 0 auto;
 }
 
 .site-logo {
@@ -37,7 +36,7 @@ header {
     text-decoration: none;
     font-size: 30px;
     font-weight: 300;
-    padding-left: 276px;
+   
 
 }
 
@@ -51,7 +50,7 @@ header {
     float: right;
     padding-top: 10px;
     width: 467px;
-    padding-right: 245px;
+    
 
 }
 
@@ -81,54 +80,71 @@ header {
     color: #1abc9c;
 }
 
-.slider {
+.background-image{
     width: 100%;
     height: 600px;
-    margin: auto;
+    object-fit: cover;
 
 }
 
 
 .slider-cyrl {
+    
+    top: 33%;
     position: absolute;
     border: none;
     display: block;
     width: 104px;
     height: 104px;
     opacity: 0.65;
-    background-color: #4ec6ab;
-    top: 33%;
+    background-color: #1abc9c;
     cursor: pointer;
 
+}
+.slider-cyrl:hover {
+    background-color: #1abc9c;
+    opacity: 1;
+}
+
+.slider-cyrl::before{
+    content: '';
+    display: block;
+    height: 38px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .slider-cyrl-prev {
     left: 0;
-    margin-left: 245px;
+   
+}
+.slider-cyrl-prev::before{
+    background-image: url(../img/icon/prev.png);
 }
 
 .slider-cyrl-next {
     right: 0;
-    margin-right: 245px;
+    
 }
+.slider-cyrl-next::before{
+    background-image: url(../img/icon/next.png);
+}
+
 
 .container-text-h-p {
     position: absolute;
-    width: 800px;
-    height: 98px;
     left: 50%;
     transform: translateX(-50%);
     top: 30%;
     transform: translateX(-50%);
-    margin: auto;
     font-size: 24px;
     font-weight: 300;
     text-transform: uppercase;
-
+    width: 760px;
 }
 
 .slider-h2 {
-
+    
     color: #ffffff;
     font-family: "Roboto";
     font-size: 60px;
@@ -143,7 +159,7 @@ header {
     color: #ffffff;
     font-family: "Roboto";
     font-weight: 300;
-    letter-spacing: -0.48px;
+    letter-spacing: -0.60px;
     line-height: 54px;
 
 }
@@ -152,12 +168,13 @@ header {
 .new-collection {
     text-align: center;
     color: #515151;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 48px;
     font-weight: 700;
     text-transform: uppercase;
     padding-bottom: 92px;
     padding-top: 101px;
+    
 }
 
 .new-collection::after {
@@ -177,25 +194,17 @@ header {
 
 .featured-products-list {
     font-size: 0;
-
-    width: 1111px;
-    margin: 0 auto;
+   
+    
 }
 
-.featured-products-list li {
+.featured-products-list li{
     float: left;
     margin-right: 30px;
     margin-bottom: 30px;
     list-style: none;
-}
-
-
-.featured-products-list-item {
     width: 255px;
-    float: left;
-
 }
-
 
 
 .featured-products-list li:nth-child(4n) {
@@ -210,7 +219,7 @@ header {
     padding-left: 13px;
     background-color: #323232;
     color: #ffffff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 18px;
     font-weight: 900;
     line-height: 32px;
@@ -220,21 +229,20 @@ header {
 
 }
 
-
 .price {
     text-align: center;
     color: #ffffff;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-size: 18px;
     font-weight: 900;
     line-height: 32px;
     background-color: #323232;
     opacity: 0.44;
     width: 42px;
-    float: right;
+    float: left;
 }
 
-.featured-products-list a:hover .production-text {
+.featured-products-list a:hover .production-text{
     background: #1abc9c;
 }
 
@@ -249,25 +257,28 @@ header {
 
 .overlay {
     position: absolute;
-    width: 90%;
-    height: 303px;
-    border: 10px solid #ffffff;
-    background-color: #000000;
-    opacity: 0;
+    width: 235px;
+    height: 302px;
+    background-color: rgba(0, 0, 0, 0.549);
+    border: 10px solid #ffffff;   
+    display: none;
 
 }
 
+
 .featured-products-list-item:hover .overlay {
-    opacity: 0.55;
+    display: block;
+    opacity: 1;
 }
 
 .buttom-social {
-
+border: none;
     display: inline-block;
     margin-right: 9px;
     width: 50px;
     height: 50px;
-
+    opacity: 0.55;
+    background: none;
 }
 
 .position-social {
@@ -276,19 +287,19 @@ header {
     top: 80px;
 }
 
-.buttom-social:hover  {
-    cursor: pointer;
+.buttom-social:hover {
+    opacity: 1;
+    background-color: #1abc9c;
+
+}
+
+.buttom-basket:hover {
+    opacity: 1;
     border: 1px solid #1abc9c;
     background-color: #1abc9c;
 
 }
 
-.buttom-basket:hover  {
-    cursor: pointer;
-    border: 1px solid #1abc9c;
-    background-color: #1abc9c;
-
-}
 .buttom-basket {
     position: absolute;
     left: 0;
@@ -296,7 +307,8 @@ header {
     width: 166px;
     height: 50px;
     border: 1px solid #ffffff;
-    
+    opacity: 0.55;
+    background: none;
 }
 
 .buttom-basket img {
@@ -318,7 +330,6 @@ header {
 
 }
 
-
 footer {
     height: 88px;
     background-color: #323232;
@@ -330,7 +341,6 @@ footer {
 
 .footer-p {
     color: #ffffff;
-    color: #fefefe;
     font-family: "Open Sans";
     font-size: 16px;
     font-weight: 400;
