--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -148,7 +148,7 @@
 }
 
 .icon-ok::before {
-    background-image: url(../img/icon/_OK.png);
+    background-image: url(../img/icon/OK.png);
 }
 
 .icon-book::before {
