--- a/module-07/css/style.css
+++ b/module-07/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-  width: 942px;
+  width: 940px;
   margin: 0 auto;
 }
 
@@ -26,12 +26,14 @@
   font: 400 26px "Wisdom - Script";  
   letter-spacing: 1.3px;   
 }
+
 .menu-list {
   display: flex;
   width: 480px;
   list-style: none; 
   justify-content: space-between;
 }
+
 .menu-link{
   color: #222222;
   font: 700 14px 'Montserrat';  
@@ -42,25 +44,22 @@
 }
 
 .menu-link:hover{
-  color: #fed136;
-  
+  color: #fed136;  
 }
 
 /* section services */
 
 .title-text{
   text-align: center;
-  font-family: 'Montserrat';
-  font-size: 40px;
-  font-weight: 700;
+  font:700 40px 'Montserrat';
   text-transform: uppercase;
 }
 .titel-services{
   color: #222222;
   line-height: 75px;
-  letter-spacing: -1px;
-    
+ 
 }
+
 .h2-p{
   color: #777777;
   font-family: "Droid Serif";
@@ -96,43 +95,40 @@ background-image: url(../img/basket.png);
 }
 .title-h3-services{
   color: #222222;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-weight: 700;
-  /* Text style for "E, -Commer" */
+  font:700 18px Montserrat;
   letter-spacing: -0.45px;
  padding-bottom: 15px;
 }
 .text-services{
   color: #777777;
-  font-family: "Roboto Slab";
-  font-size: 14px;
-  font-weight: 400;
-  /* Text style for "P, roin ia" */
+  font:400 14px "Roboto Slab";
+   /* Text style for "P, roin ia" */
   letter-spacing: -0.35px;
   padding-bottom: 120px;
 }
-.contact-us{
- 
+
+/* section us */
+
+.contact-us{ 
   padding-top: 101px;
-  margin: 0 auto;
-  width: 1402px;
-  height: 676px;
-  background: url(../img/background.png);
-  background-repeat: no-repeat;
+  background-position: center;  
+  background-image: url(../img/background.png);
+  background-repeat: no-repeat;  
+  padding-bottom: 100px;
 }
+
 .titel-contact-us{
   color: #ffffff;
   padding-bottom: 23px;
 }
+
 .input-footer{  
   width: 455px;
   height: 50px;
+  font:500 18px Montserrat;
   border: 1px solid #cccccc;
   border-radius: 5px;
   
-  font:500 18px Montserrat;
-
 }
 
 .input-data{  
@@ -140,38 +136,33 @@ background-image: url(../img/basket.png);
   height: 211px;
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
- 
+  flex-direction: column; 
 }
 
 .footer-data{
-  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   
 }
 
 .input-message{
-  position: absolute;
-  top: 0;
   left: 487px;
   height: 211px;
   resize: none;
 }
+
 .input-footer::placeholder{
   color: #bbbbbb;
-font-family: Montserrat;
-font-size: 14px;
-font-weight: 700;
-text-transform: uppercase;
-letter-spacing: -0.35px;
-padding-left: 20px;;
+  font:700 14px Montserrat;
+   text-transform: uppercase;
+   padding-left: 20px;;
 }
+
 .input-message::placeholder{
   padding-top: 20px;
 }
 .form-btm{
-  display: block;
-  margin: 0 auto;
-  margin-top: 30px;
   width: 240px;
   height: 66px;
   background-color: #fed136;
@@ -180,26 +171,38 @@ padding-left: 20px;;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
+  margin: 31px auto 0;
   cursor: pointer;
-  }
+}
+.form-btm:hover{
+background-color:#ffffff;
+color:#fed136;
+transition: all 200ms;
+-webkit-box-shadow: 0px 0px 5px 2px rgba(254,209,54,1);
+-moz-box-shadow: 0px 0px 5px 2px rgba(254,209,54,1);
+box-shadow: 0px 0px 5px 2px rgba(254,209,54,1);
+}
 
 .input-footer[type="name"]:valid:focus{
-  -webkit-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
-  -moz-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
-  box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+-webkit-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+-moz-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
 }
+
 .input-footer[type="name"]:invalid:focus{
-  -webkit-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-  -moz-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-  box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-  }
-  .input-footer[type="email"]:valid:focus{
-    -webkit-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
-    -moz-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
-    box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
-  }
-  .input-footer[type="email"]:invalid:focus{
-    -webkit-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-    -moz-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-    box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
-    }
+-webkit-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+-moz-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+}
+
+.input-footer[type="email"]:valid:focus{
+-webkit-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+-moz-box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+box-shadow: 1px 1px 32px -1px rgba(0,255,26,1);
+}
+
+.input-footer[type="email"]:invalid:focus{
+-webkit-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+-moz-box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+box-shadow: 1px 1px 32px -1px rgba(255,0,0,1);
+}
