--- a/module-08/css/style.css
+++ b/module-08/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .container{
-  width: 320px; 
+  max-width: 320px; 
   margin: 0 auto;
 }
 
@@ -225,7 +225,7 @@ text-align: center;
   }
   @media(min-width: 768px){
     .container{
-      width: 768px; 
+      max-width: 768px; 
       
     }
     .header-site{
@@ -260,7 +260,7 @@ text-align: center;
     
     @media(min-width: 1440px){
       .container{
-        width: 1440px; 
+        max-width: 1440px; 
         margin: 0 auto;
       }        
       
